--- a/public/styles/main-style.css
+++ b/public/styles/main-style.css
@@ -151,6 +151,7 @@ p {
   border-radius: 0px;
   border-top: 0px solid #1feb52;
   margin: 5px;
+  margin-bottom: 200px;
   padding-top: 5px;
   text-align: center;
 }
