Adding link to atom feed in page header tags

--- a/src/_includes/page_base.njk
+++ b/src/_includes/page_base.njk
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/graphics/favicon.gif">
-    <link rel="alternate" type="application/rss+xml" href="https://lunarlily.neocities.org/rss.xml" title="RSS">
+    <link rel="alternate" type="application/rss+xml" href="https://lunarlily.neocities.org/rss.xml" title="lunarlily RSS feed (DEPRECIATED)">
+    <link rel="alternate" type="application/atom+xml" href="https://lunarlily.neocities.org/feed.xml" title="lunarlily updates">
 
     <!--page info-->
     <title>{{ title }}{% if title !== "blooming on the moon" %}{% endif %} | lunarlily</title>
